// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner: content Banner render props content 1`] = `
<section
  className="banner"
  id="banner"
>
  <img
    className="banner-background"
    src="test-file-stub"
  />
  <div
    className="container banner-body"
  >
    <div
      className="eui-row"
    >
      <div
        className="eui-col sample-col eui-col-xs-6"
      >
        <h2
          className="text-white banner-title"
        >
          Test title
        </h2>
        <p
          className="text-white"
        >
          Test content
        </p>
        <button
          aria-label="Test button aria label"
          className="eui-btn eui-btn-default eui-btn-outline eui-btn-sm eui-btn-inverted btn-padding-lg"
          onClick={[MockFunction]}
          role="button"
          type="button"
        >
          <div
            className="eui-btn-content"
          >
            <span
              className="caption"
            >
              <span>
                Test button label
              </span>
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</section>
`;

exports[`Banner: render Button has the class and caption 1`] = `
<section
  className="banner"
  id="banner"
>
  <img
    className="banner-background"
    src="test-file-stub"
  />
  <div
    className="container banner-body"
  >
    <div
      className="eui-row"
    >
      <div
        className="eui-col sample-col eui-col-xs-6"
      >
        <h2
          className="text-white banner-title"
        >
          
        </h2>
        <p
          className="text-white"
        >
          
        </p>
        <button
          aria-label=""
          className="eui-btn eui-btn-default eui-btn-outline eui-btn-sm eui-btn-inverted btn-padding-lg"
          onClick={[Function]}
          role="button"
          type="button"
        >
          <div
            className="eui-btn-content"
          >
            <span
              className="caption"
            >
              <span>
                
              </span>
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</section>
`;

exports[`Banner: render container has the class 1`] = `
<section
  className="banner"
  id="banner"
>
  <img
    className="banner-background"
    src="test-file-stub"
  />
  <div
    className="container banner-body"
  >
    <div
      className="eui-row"
    >
      <div
        className="eui-col sample-col eui-col-xs-6"
      >
        <h2
          className="text-white banner-title"
        >
          
        </h2>
        <p
          className="text-white"
        >
          
        </p>
        <button
          aria-label=""
          className="eui-btn eui-btn-default eui-btn-outline eui-btn-sm eui-btn-inverted btn-padding-lg"
          onClick={[Function]}
          role="button"
          type="button"
        >
          <div
            className="eui-btn-content"
          >
            <span
              className="caption"
            >
              <span>
                
              </span>
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</section>
`;

exports[`Banner: render has the section class 1`] = `
<section
  className="banner"
  id="banner"
>
  <img
    className="banner-background"
    src="test-file-stub"
  />
  <div
    className="container banner-body"
  >
    <div
      className="eui-row"
    >
      <div
        className="eui-col sample-col eui-col-xs-6"
      >
        <h2
          className="text-white banner-title"
        >
          
        </h2>
        <p
          className="text-white"
        >
          
        </p>
        <button
          aria-label=""
          className="eui-btn eui-btn-default eui-btn-outline eui-btn-sm eui-btn-inverted btn-padding-lg"
          onClick={[Function]}
          role="button"
          type="button"
        >
          <div
            className="eui-btn-content"
          >
            <span
              className="caption"
            >
              <span>
                
              </span>
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</section>
`;

exports[`Banner: render img has the class 1`] = `
<section
  className="banner"
  id="banner"
>
  <img
    className="banner-background"
    src="test-file-stub"
  />
  <div
    className="container banner-body"
  >
    <div
      className="eui-row"
    >
      <div
        className="eui-col sample-col eui-col-xs-6"
      >
        <h2
          className="text-white banner-title"
        >
          
        </h2>
        <p
          className="text-white"
        >
          
        </p>
        <button
          aria-label=""
          className="eui-btn eui-btn-default eui-btn-outline eui-btn-sm eui-btn-inverted btn-padding-lg"
          onClick={[Function]}
          role="button"
          type="button"
        >
          <div
            className="eui-btn-content"
          >
            <span
              className="caption"
            >
              <span>
                
              </span>
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</section>
`;

exports[`Banner: render renders banner correctly 1`] = `
<section
  className="banner"
  id="banner"
>
  <img
    className="banner-background"
    src="test-file-stub"
  />
  <div
    className="container banner-body"
  >
    <div
      className="eui-row"
    >
      <div
        className="eui-col sample-col eui-col-xs-6"
      >
        <h2
          className="text-white banner-title"
        >
          
        </h2>
        <p
          className="text-white"
        >
          
        </p>
        <button
          aria-label=""
          className="eui-btn eui-btn-default eui-btn-outline eui-btn-sm eui-btn-inverted btn-padding-lg"
          onClick={[Function]}
          role="button"
          type="button"
        >
          <div
            className="eui-btn-content"
          >
            <span
              className="caption"
            >
              <span>
                
              </span>
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</section>
`;
